# android

./: .gitignore  build.gradle.kts  framasit.jks  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/therouter/: routeMap.json
app/src/main/cpp/: CMakeLists.txt
app/src/main/res/color/: tab_color_selector.xml
app/src/main/res/drawable/: bg_account.xml  bg_tab_discover_selector.xml  bg_tab_factory_selector.xml  bg_tab_home_selector.xml  bg_tab_mine_selector.xml  bg_tab_recommend_list.xml  exposure_seek_bar.xml  ic_account_b1.xml  ic_arrow_left_white.xml  ic_arrow_right_gray_9da3ae.xml  ic_auto_flash.xml  ic_bg_camera.xml  ic_camera_blue.xml  ic_camera_focus.xml  ic_camera_white.xml  ic_clock_white.xml  ic_close_flash.xml  ic_close_white.xml  ic_collect_red.xml  ic_collect_white.xml  ic_download_white.xml  ic_exposure.xml  ic_factory_blue.xml  ic_factory_gray_9da3ae.xml  ic_failed_red.xml  ic_home_blue.xml  ic_home_gray_9da3ae.xml  ic_light_white.xml  ic_lock_grey.xml  ic_mine_blue.xml  ic_mine_gray_9da3ae.xml  ic_mine_help.xml  ic_mine_history.xml  ic_mine_logout.xml  ic_my_collect.xml  ic_open_flash.xml  ic_ratio_16_9_white.xml  ic_search_9da3ae.xml  ic_search_blue.xml  ic_setting.xml  (+4 more)
app/src/main/res/drawable-xxhdpi/: ic_launcher.xml
app/src/main/res/layout/: activity_camera.xml  (+25 more)
base/: build.gradle.kts  mapping.txt  proguard-rules.pro
common/: build.gradle.kts  proguard-rules.pro
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+154 files in other folders)
